# CommonPlace

./: .gitignore  .railwayignore  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.console.toml  railway.toml  trigger-deploy.txt
.claude/: ecc-tools.json  identity.json  launch.json
.claude/skills/CommonPlace/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: commonplace-ci.yml  console-ci.yml  rustyred-source-update.yml
.harness/: checklist-2026-07-01-github-app-ingestion.json  checklist.json  index-surface-remaining.checklist.json  native-shell-cursor-intent.md
.harness/checklists/: commonplace-native-shell-1.0.json  console-chat-surface--plan-local.json  indexer-live-wiring--local.json
.next/: trace  trace-build
.theorem/: current-artifact.json  current-context.md
.theorem/hook-doctor/: events.jsonl  latest.json
.theorem/review/: language-checks-20260709T035755Z.json  language-checks-20260709T040330Z.json  language-checks-20260709T143637Z.json  language-checks-20260709T150758Z.json  language-checks-20260709T151815Z.json  language-checks-20260709T151946Z.json  latest-language-checks.json  repo-hygiene-20260709T035716Z.json  repo-hygiene-20260709T040240Z.json  repo-hygiene-20260709T045402Z.json  repo-hygiene-20260709T143603Z.json  repo-hygiene-20260709T150723Z.json  repo-hygiene-20260709T151739Z.json  repo-hygiene-20260709T151911Z.json  repo-hygiene-20260709T153431Z.json  repo-hygiene-20260709T153922Z.json
.theorem/runs/: ca30dedb-1622-42a7-8a90-6b21decba80b.run_id
.theorem/runs/ca30dedb-1622-42a7-8a90-6b21decba80b/: last-artifact.json  last-artifact.md
apps/browser-native/: Cargo.toml  PINS.md  README.md
apps/browser-native/src/: chrome.rs  dock.rs  lib.rs  pins.rs  prompts.rs  rail.rs  traits.rs
apps/browser-native/src/surfaces/: commonplace.rs  mod.rs  servo.rs  zorder.rs
apps/commonplace-api/: .env.example  Cargo.toml  Dockerfile  README.md  railway.toml
apps/commonplace-api/src/: find.rs  growth.rs  keystore.rs  lib.rs  publish.rs  salience.rs  save_url.rs  schema.rs  serve.rs  voice.rs
apps/commonplace-api/src/schema/: find.rs  mod.rs  scatter.rs
apps/commonplace-api/tests/: f3_api_acceptance.rs  find_acceptance.rs  mobile_wiring_acceptance.rs  objects_http_acceptance.rs  organize_acceptance.rs  pt008_remind_acceptance.rs  pt017_blob_capture_acceptance.rs
apps/commonplace-collab/: package-lock.json  package.json
apps/commonplace-collab/src/: server.mjs
apps/console/: .gitignore  AGENTS.md  CLAUDE.md  NOTICE.md  components.json  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/console/docs/: motion-measurements.md
apps/console/e2e/: account.spec.ts  appearance.spec.ts  cards.spec.ts  color-audit.ts  console-ia.spec.ts  console-sidebar.spec.ts  filing-index.spec.ts  hunk-review.spec.ts  island-stripe-promotion.spec.ts  omnibar.spec.ts  paint-audit.ts  proactivity.spec.ts  proof-workspace.spec.ts  search-field.spec.ts  signatures.spec.ts  stub-data-api.mjs  survey.spec.ts  type-audit.ts  workspace-goal-stack.spec.ts
apps/desktop/: README.md  package-lock.json  package.json
apps/mobile/: .env.example  AGENTS.md  README.md  app.config.ts  app.json  eas.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web/: .env.local.example  .gitignore  .size-limit.json  CLAUDE.md  COMMONPLACE_V2.md  DESIGN.md  NOTICE.md  PRODUCT.md  README.md  capacitor.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  railway.toml  tsconfig.json  vitest.config.ts
crates/browser-core/: Cargo.toml
crates/browser-core/src/: lib.rs  permissions.rs  session.rs  single_instance.rs  update.rs
crates/browser-core/tests/: acceptance.rs
crates/commonplace/: Cargo.toml  README.md
crates/commonplace-browser-substrate/: Cargo.toml  README.md
crates/commonplace-browser-substrate/src/: lib.rs
crates/commonplace-desktop-runtime/: Cargo.toml
crates/commonplace-desktop-runtime/src/: lib.rs  margin_recall.rs  site_policy.rs
crates/commonplace/src/: annotation.rs  block_view.rs  collection.rs  ingest.rs  item.rs  lib.rs  mentions.rs  page.rs  reconstruction.rs  reminder.rs  stamp.rs  store.rs
crates/commonplace/tests/: f1_object_model_acceptance.rs  plane_parity_acceptance.rs  reconstruction_e2e_pipeline.rs  source_intake_acceptance.rs
crates/interaction-arbiter/: Cargo.toml
crates/interaction-arbiter/src/: lib.rs
docs/: browser-migration.md  commonplace-collab.md  harness-console-absorption.md  rustyred-update-channel.md
docs/architecture/: api-topology.md
docs/learnings/: 2026-07-12-net-new-files-are-not-salvage-check-importers.md  2026-07-12-preserve-other-agent-uncommitted-wip-across-merge.md  2026-07-12-register-tailwind-utility-layer-is-incomplete.md  2026-07-12-verify-styling-architecture-before-css-migration.md  2026-07-12-workspace-protocol-standalone-lockfile.md  2026-07-18-console-eslint-set-state-in-effect.md  2026-07-20-console-preview-needs-three-things.md  2026-07-20-do-not-thrash-the-shared-dev-server.md  2026-07-20-enospc-reads-as-a-test-failure.md  2026-07-20-two-divergent-commonplace-forks.md  2026-07-21-three-object-layers-not-http-only.md
docs/plans/: harness-console-migration.md
docs/records/: 001-repo-foundation-and-rustyred-updates.md  002-browser-substrate-port.md  003-product-app-migration.md  004-mobile-app.md  005-growth-layer-commonplace-port.md  006-harness-login.md  007-mobile-runtime-wiring.md  HUNK-SURFACE-GREENFIELD-MIGRATION.md
docs/specs/: SPEC-COMMONPLACE-NATIVE-SHELL-1.0.md  SPEC-UX-PHYSICS-AND-ACCENT.md
patches/: @travis-gilbert__markdown-theory@0.1.1.patch
scripts/: update-rustyred-source.mjs
(+1303 files in other folders)
