# SOURCING: none — GPUI-free BrowserCore for SPEC-COMMONPLACE-NATIVE-SHELL-1.0 B2.

[package]
name = "browser-core"
version = "0.1.0"
edition = "2021"
description = "GPUI-free browser core: tabs, session graph views, permissions, downloads, single-instance, update check."
license = "MIT"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
