[package]
name = "commonplace"
version = "0.1.0"
edition = "2021"
description = "CommonPlace consumer object model (Item/Collection/Tag) and auto-structuring ingest, graph-native over the RustyRedCore-THG substrate."
license = "MIT"
rust-version = "1.85"

# Own Cargo root while this product crate still bridges to sibling Theorem
# substrate crates through local paths.
[workspace]

[dependencies]
rustyred-thg-core = { path = "../../../Theorem/rustyredcore_THG/crates/rustyred-thg-core" }
rustyred-thg-reconstruct-fact = { path = "../../../Theorem/rustyredcore_THG/crates/rustyred-thg-reconstruct-fact" }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
blake3 = "1"
